<?xml version="1.0"?>
<package>
  <name>octo_avoid</name>
  <version>0.0.0</version>
  <description>Collision avoidance for octomaps</description>

  <maintainer email="amai@todo.todo">amai</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <license>TODO</license>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>copter_control</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>copter_control</run_depend>

  <export>

  </export>
</package>
